--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]
 python = "^3.9"
 pandas = "^1.4.1"
 cassandra-driver = "^3.25.0"
+notebook = "^6.4.8"
 
 [tool.poetry.dev-dependencies]
 
